# fastapi-boilerplate-template-mongodb

./: .env  pyproject.toml
app/: __init__.py
app/database/: connect.py  model.py  models.py
app/settings/: config.py
